--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -8,7 +8,7 @@
     "allowJs": true,
     "strict": true,
     "noEmit": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   },
   "include": ["**/*.ts", "**/*.tsx"]
 }
